fix(divider): add dark mode variables (#743)

--- a/tegel/src/components/divider/divider-theme-vars.scss
+++ b/tegel/src/components/divider/divider-theme-vars.scss
@@ -1,35 +1,14 @@
-$types: (
-  'light': var(--sdds-grey-300),
-  'dark': var(--sdds-grey-868),
-  'coloured': var(--sdds-blue-600),
-);
 $border-types: top, right, bottom, left;
 
 :root,
 .sdds-theme-light {
-  @each $type, $value in $types {
-    --sdds-divider-#{$type}: #{$value};
-    --sdds-divider-#{$type}-vertical: #{$value};
-
-    @each $border-type in $border-types {
-      --sdds-divider-#{$type}-border-#{$border-type}: #{$value};
-    }
-  }
+  --sdds-divider-background: var(--sdds-grey-300);
 }
-
+:root,
 .sdds-theme-dark {
-  $types: (
-    'light': var(--sdds-white),
-    'dark': var(--sdds-grey-300),
-    'coloured': var(--sdds-blue-200),
-  );
-
-  @each $type, $value in $types {
-    --sdds-divider-#{$type}: #{$value};
-    --sdds-divider-#{$type}-vertical: #{$value};
-
-    @each $border-type in $border-types {
-      --sdds-divider-#{$type}-border-#{$border-type}: #{$value};
-    }
-  }
+  --sdds-divider-background: var(--sdds-grey-700);
+}
+:root,
+.sdds-theme-colored {
+  --sdds-divider-background: var(--sdds-blue-700);
 }
